[Feature] 추천 결과 응답에 거리 범위별 집계(distances) 필드 추가
- ParticipantAnalyzer: aggregateDistanceRanges() 메서드 추가
- preferences/dislikes 집계에서 ANY 포함하도록 수정
- RecommendResultData.Get, GetRecommendResultResponse에 distances 필드 추가

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>